# EarthPulse

./: BUILD_OUTLINE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: artifact-hygiene.yml
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
scripts/: check-tracked-artifacts.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  notifications.rs  tray.rs
src-tauri/src/calculations/: mod.rs  orbit.rs  terminator.rs
src-tauri/src/commands/: air_quality.rs  asteroid.rs  earthquake.rs  eonet.rs  gdacs.rs  historical.rs  iss.rs  meteor.rs  mod.rs  plate.rs  replay.rs  satellite.rs  settings.rs  solar.rs  solar_event.rs  sst.rs  summary.rs  terminator.rs  volcano.rs  watchlist.rs  weather.rs
src-tauri/src/fetchers/: air_quality.rs  asteroid.rs  earthquake.rs  eonet.rs  gdacs.rs  historical.rs  http.rs  iss.rs  meteor.rs  mod.rs  plate.rs  solar.rs  solar_event.rs  sst.rs  tle.rs  volcano.rs  weather.rs
src-tauri/src/models/: air_quality.rs  asteroid.rs  earthquake.rs  eonet.rs  gdacs.rs  iss.rs  meteor.rs  mod.rs  plate.rs  satellite.rs  solar.rs  solar_event.rs  sst.rs  volcano.rs  watchlist.rs  weather.rs
src/audio/: SonificationEngine.ts
src/components/: Header.tsx
src/hooks/: useAsteroidEvents.ts  useEarthquakeEvents.ts  useEonetEvents.ts  useGdacsEvents.ts  useKeyboardShortcuts.ts  useSonification.ts  useSourceHealth.ts
src/stores/: airQualityStore.ts  asteroidStore.ts  earthquakeStore.ts  eonetStore.ts  eventStore.ts  (+19 more)
(+58 files in other folders)
